tests/baselines/reference/typeName1.errors.txt
tests/cases/compiler/typeName1.ts(9,5): error TS2322: Type '3' is not assignable to type '{ f(s: 文字): 数字; f(n: 数字): 文字; }'.
tests/cases/compiler/typeName1.ts(10,5): error TS2322: Type '3' is not assignable to type '{ f(s: 文字): 数字; }'.
tests/cases/compiler/typeName1.ts(11,5): error TS2322: Type '3' is not assignable to type '{ (s: 文字): 数字; (n: 数字): 文字; }'.
tests/cases/compiler/typeName1.ts(12,5): error TS2322: Type '3' is not assignable to type '{ x: 任意; y: 任意; z: 数字; f(n: 数字): 文字; f(s: 文字): 数字; }'.
tests/cases/compiler/typeName1.ts(13,5): error TS2322: Type '3' is not assignable to type '{ (s: 文字): 数字; (n: 数字): 文字; x: 任意; y: 任意; z: 数字; f(n: 数字): 文字; f(s: 文字): 数字; }'.
tests/cases/compiler/typeName1.ts(14,5): error TS2322: Type '3' is not assignable to type '{ z: 数字; f: { (n: 数字): 文字; (s: 文字): 数字; }; }'.
tests/cases/compiler/typeName1.ts(15,5): error TS2322: Type '3' is not assignable to type '(s: 文字) => 真假'.
tests/cases/compiler/typeName1.ts(16,5): error TS2322: Type '3' is not assignable to type '{ (): 真假; [s: 文字]: { x: 任意; y: 任意; }; [n: 数字]: { x: 任意; y: 任意; }; z: I; }'.
tests/cases/compiler/typeName1.ts(16,10): error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: 任意; y: 任意; }'.
tests/cases/compiler/typeName1.ts(17,5): error TS2322: Type '3' is not assignable to type 'I'.
tests/cases/compiler/typeName1.ts(18,5): error TS2322: Type '3' is not assignable to type 'I[][][][]'.
tests/cases/compiler/typeName1.ts(19,5): error TS2322: Type '3' is not assignable to type '{ z: I; x: 真假; }[][]'.
tests/cases/compiler/typeName1.ts(20,5): error TS2322: Type '3' is not assignable to type '{ z: I; x: 真假; y: (s: 文字) => 真假; w: { (): 真假; [s: 文字]: { x: 任意; y: 任意; }; [n: 数字]: { x: 任意; y: 任意; }; z: I; }; }[][]'.
tests/cases/compiler/typeName1.ts(20,50): error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: 任意; y: 任意; }'.
tests/cases/compiler/typeName1.ts(21,5): error TS2322: Type '3' is not assignable to type '{ (): {}; 新建 (): 数字; 新建 (n: 数字): 数字; x: 文字; w: { y: 数字; }; }'.
tests/cases/compiler/typeName1.ts(22,5): error TS2322: Type '3' is not assignable to type '{ (): 文字; f(x: 数字): 真假; p: 任意; q: 任意; }'.
tests/cases/compiler/typeName1.ts(23,5): error TS2322: Type '类为 C' is not assignable to type '数字'.


==== tests/cases/compiler/typeName1.ts (17 errors) ====
    interface I {
        k;
    }
    class C {
        public eek:string;
        static zeek:number;
    }
    
    var x1:{ f(s:string):number;f(n:number):string; }=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ f(s: 文字): 数字; f(n: 数字): 文字; }'.
    var x2:{ f(s:string):number; } =3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ f(s: 文字): 数字; }'.
    var x3:{ (s:string):number;(n:number):string; }=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ (s: 文字): 数字; (n: 数字): 文字; }'.
    var x4:{ x;y;z:number;f(n:number):string;f(s:string):number; }=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ x: 任意; y: 任意; z: 数字; f(n: 数字): 文字; f(s: 文字): 数字; }'.
    var x5:{ (s:string):number;(n:number):string;x;y;z:number;f(n:number):string;f(s:string):number; }=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ (s: 文字): 数字; (n: 数字): 文字; x: 任意; y: 任意; z: 数字; f(n: 数字): 文字; f(s: 文字): 数字; }'.
    var x6:{ z:number;f:{(n:number):string;(s:string):number;}; }=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ z: 数字; f: { (n: 数字): 文字; (s: 文字): 数字; }; }'.
    var x7:(s:string)=>boolean=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '(s: 文字) => 真假'.
    var x8:{ z:I;[s:string]:{ x; y; };[n:number]:{x; y;};():boolean; }=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type '{ (): 真假; [s: 文字]: { x: 任意; y: 任意; }; [n: 数字]: { x: 任意; y: 任意; }; z: I; }'.
             ~~~~
!!! error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: 任意; y: 任意; }'.
    var x9:I=3;
        ~~
!!! error TS2322: Type '3' is not assignable to type 'I'.
    var x10:I[][][][]=3;
        ~~~
!!! error TS2322: Type '3' is not assignable to type 'I[][][][]'.
    var x11:{z:I;x:boolean;}[][]=3;
        ~~~
!!! error TS2322: Type '3' is not assignable to type '{ z: I; x: 真假; }[][]'.
    var x12:{z:I;x:boolean;y:(s:string)=>boolean;w:{ z:I;[s:string]:{ x; y; };[n:number]:{x; y;};():boolean; };}[][]=3;
        ~~~
!!! error TS2322: Type '3' is not assignable to type '{ z: I; x: 真假; y: (s: 文字) => 真假; w: { (): 真假; [s: 文字]: { x: 任意; y: 任意; }; [n: 数字]: { x: 任意; y: 任意; }; z: I; }; }[][]'.
                                                     ~~~~
!!! error TS2411: Property 'z' of type 'I' is not assignable to string index type '{ x: 任意; y: 任意; }'.
    var x13:{ new(): number; new(n:number):number; x: string; w: {y: number;}; (): {}; } = 3;
        ~~~
!!! error TS2322: Type '3' is not assignable to type '{ (): {}; 新建 (): 数字; 新建 (n: 数字): 数字; x: 文字; w: { y: 数字; }; }'.
    var x14:{ f(x:number):boolean; p; q; ():string; }=3;
        ~~~
!!! error TS2322: Type '3' is not assignable to type '{ (): 文字; f(x: 数字): 真假; p: 任意; q: 任意; }'.
    var x15:number=C;
        ~~~
!!! error TS2322: Type '类为 C' is not assignable to type '数字'.
    
    
    
    